<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.applandeo.materialcalendarview.CalendarView
        android:id="@+id/calSelectedDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:abbreviationsBarColor="@color/colorAccent"
        app:abbreviationsLabelsColor="@color/colorPrimaryDark"
        app:headerColor="@color/colorAccent"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:type="many_days_picker"/>

    <Button
        android:id="@+id/btnNone"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_none"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/btnBusinessDays"
        app:layout_constraintTop_toBottomOf="@+id/calSelectedDate" />

    <Button
        android:id="@+id/btnBusinessDays"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_business"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calSelectedDate" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSet"
        app:layout_constraintTop_toBottomOf="@id/btnNone" />

    <Button
        android:id="@+id/btnSet"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_OK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNone" />




</androidx.constraintlayout.widget.ConstraintLayout>