<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/employersCardView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civEmployersProfile"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/profile_img"/>

            <TextView
                android:id="@+id/txtEmployers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/civEmployersProfile"
                android:layout_toEndOf="@id/civEmployersProfile"
                android:text="Employer's Name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/txtNumberOfDaysLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmployers"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/civEmployersProfile"
                android:text="@string/number_of_days"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtNumberOfDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmployers"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/txtNumberOfDaysLabel"
                android:text="broj dana"
                android:textColor="#0B1B69"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtTenOrMoreDaysLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNumberOfDaysLabel"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@id/civEmployersProfile"
                android:text="@string/ten_or_more_days"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtTenOrMoreDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNumberOfDays"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_alignLeft="@id/txtNumberOfDays"
                android:layout_toRightOf="@id/txtTenOrMoreDaysLabel"
                android:text="broj dana"
                android:textColor="#0B1B69"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtDaysWithExcuseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTenOrMoreDays"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@id/civEmployersProfile"
                android:text="@string/days_with_excuse"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtDaysWithExcuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTenOrMoreDays"
                android:layout_marginTop="5dp"
                android:layout_alignLeft="@id/txtTenOrMoreDays"
                android:layout_toRightOf="@id/txtDaysWithExcuseLabel"
                android:text="broj dana"
                android:textColor="#0B1B69"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>